🐛 fix: get started module layout (#376)
* Fixed bug that the top right menu items hidden when code block is too long in get started page

* Update prism.theme.less

* update

---------

--- a/modules/front-end/src/app/features/safe/get-started/get-started.component.less
+++ b/modules/front-end/src/app/features/safe/get-started/get-started.component.less
@@ -2,7 +2,7 @@
   width: 100%;
   height: calc(100% - 12px);
   display: grid;
-  grid-template-columns: 1fr 350px;
+  grid-template-columns: minmax(0, 1fr) 320px;
 
   .steps {
     padding-right: 24px;
